[metadata]
name = maud
url = https://github.com/biosustain/Maud
download_url = https://pypi.org/project/maud/
author = Novo Nordisk Foundation Center for Biosustainability, Technical University of Denmark
author_email = tedgro@dtu.dk
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License version 3
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
license = GNU General Public License version 3
description = Bayesian statistical models of metabolic networks
long_description = file: README.rst
keywords =

[options]
zip_safe = True
include_package_data=True
install_requires =
    arviz
    numpy
    scipy
    pandas
    matplotlib
    jinja2
    toml
    cmdstanpy >=0.9.2
    click
    depinfo
    tqdm
python_requires = >=3.7
tests_require =
    tox
packages = find:
package_dir =
     = src

[options.entry_points]
console_scripts =
    maud = maud.cli:cli

[options.packages.find]
where = src

[options.extras_require]
development =
    black
    isort
    tox
    sphinx
    sphinx-click

[bdist_wheel]
universal = 1

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = src/maud/_version.py
versionfile_build = maud/_version.py
tag_prefix =
parentdir_prefix = maud-

