[metadata]
name = maud
url = https://github.com/biosustain/Maud
download_url = https://pypi.org/project/maud/
author = Novo Nordisk Foundation Center for Biosustainability, Technical University of Denmark
author_email = tedgro@dtu.dk
# Please consult https://pypi.org/classifiers/ for a full list.
version = 0.3.2
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License version 3
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
license = GNU General Public License version 3
description = Bayesian statistical models of metabolic networks
long_description = file: README.rst
keywords =

[options]
zip_safe = True
include_package_data=True
install_requires =
    pip >= 20
    arviz
    numpy
    scipy
    sympy
    pandas
    matplotlib
    jinja2
    toml
    cmdstanpy@git+https://github.com/stan-dev/cmdstanpy.git@develop
    click
    depinfo == 1.7.0
    tqdm
    plotnine
    pydantic >= 1.9.0
    seaborn
python_requires = >=3.7
tests_require =
    tox
packages = find:
package_dir =
     = src

[options.entry_points]
console_scripts =
    maud = maud.cli:cli

[options.packages.find]
where = src

[options.extras_require]
development =
    black
    isort
    pytest
    tox
    sphinx
    sphinx-click

[bdist_wheel]
universal = 1